Updated staff page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,35 @@
   <p>A safe and inspiring place for academic excellence</p>
 </section>
 
+<section class="stats">
+  <div>
+    <h3>500+</h3>
+    <p>Students</p>
+  </div>
+  <div>
+    <h3>30+</h3>
+    <p>Qualified Teachers</p>
+  </div>
+  <div>
+    <h3>15+</h3>
+    <p>Years of Excellence</p>
+  </div>
+  <div>
+    <h3>100%</h3>
+    <p>KCSE Completion</p>
+  </div>
+</section>
+
+<section class="light">
+  <h2>Message from the Principal</h2>
+  <p>
+    Welcome to Karo School. Our mission is to empower learners
+    with knowledge, discipline, and strong moral values.
+    We believe every student has potential to succeed.
+  </p>
+  <p><strong>— Mr. John Karo</strong></p>
+</section>
+
 <section>
   <h2>About Karo School</h2>
   <p>
