--- a/environment.html
+++ b/environment.html
@@ -18,6 +18,15 @@
 </nav>
 
 <section>
+  <h2>School Gallery</h2>
+  <div class="gallery">
+    <img src="https://images.unsplash.com/photo-1588072432836-e10032774350" alt="">
+    <img src="https://images.unsplash.com/photo-1596495578065-6e0763fa1178" alt="">
+    <img src="https://images.unsplash.com/photo-1577896851231-70ef18881754" alt="">
+  </div>
+</section>
+
+<section>
   <h2>Our Learning Environment</h2>
   <ul>
     <li>🌳 Green and clean school compound</li>
