Added green and clean compound image

--- a/environment.html
+++ b/environment.html
@@ -37,6 +37,22 @@
   </ul>
 </section>
 
+<section class="compound-section">
+  <div class="compound-text">
+    <h2>Green & Clean Compound</h2>
+    <p>
+      Our school compound is surrounded by trees, flowers,
+      and well-maintained gardens that provide fresh air and
+      a peaceful atmosphere for learning.
+    </p>
+  </div>
+
+  <div class="compound-image">
+    <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7"
+         alt="Green school compound">
+  </div>
+</section>
+
 <footer>
   <p>© 2026 Karo School</p>
 </footer>
