Updated classroom image

--- a/environment.html
+++ b/environment.html
@@ -53,6 +53,21 @@
   </div>
 </section>
 
+<section class="classroom-section">
+  <h2>Spacious & Well-Ventilated Classrooms</h2>
+
+  <div class="classroom-image">
+    <img src="https://images.unsplash.com/photo-1577896851231-70ef18881754"
+         alt="Bright and spacious classroom with large windows">
+  </div>
+
+  <p>
+    Our classrooms are bright, airy, and designed with large windows
+    to allow natural light and proper air circulation for a
+    comfortable learning experience.
+  </p>
+</section>
+s
 <footer>
   <p>© 2026 Karo School</p>
 </footer>
