Added Library and ICT Lab images

--- a/environment.html
+++ b/environment.html
@@ -67,7 +67,35 @@
     comfortable learning experience.
   </p>
 </section>
-s
+
+<section class="library-section">
+  <h2>School Library</h2>
+
+  <div class="library-image">
+    <img src="https://images.unsplash.com/photo-1581091012184-41c1aaf6b784"
+         alt="School Library with books and reading area">
+  </div>
+
+  <p>
+    Our library is fully stocked with books, journals, and digital resources.
+    Students have a quiet and comfortable space to study and do research.
+  </p>
+</section>
+
+<section class="ict-section">
+  <h2>ICT Laboratory</h2>
+
+  <div class="ict-image">
+    <img src="https://images.unsplash.com/photo-1581091215361-87c5abf5791e"
+         alt="School ICT Lab with computers">
+  </div>
+
+  <p>
+    Our ICT lab is equipped with modern computers and high-speed internet
+    to ensure students learn computer skills effectively.
+  </p>
+</section>
+
 <footer>
   <p>© 2026 Karo School</p>
 </footer>
