Fixed Library and ICT Lab images URLs

--- a/environment.html
+++ b/environment.html
@@ -72,7 +72,7 @@
   <h2>School Library</h2>
 
   <div class="library-image">
-    <img src="https://images.unsplash.com/photo-1581091012184-41c1aaf6b784"
+    <img src="https://images.unsplash.com/photo-1532012197267-da84d127e765?auto=format&fit=crop&w=1200&q=80"
          alt="School Library with books and reading area">
   </div>
 
@@ -86,7 +86,7 @@
   <h2>ICT Laboratory</h2>
 
   <div class="ict-image">
-    <img src="https://images.unsplash.com/photo-1581091215361-87c5abf5791e"
+    <img src="https://images.unsplash.com/photo-1581091215361-87c5abf5791e?auto=format&fit=crop&w=1200&q=80"
          alt="School ICT Lab with computers">
   </div>
 
